--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,19 +27,19 @@
             <!-- ログインしている場合に表示されます -->
             <!-- user_signed_in? は device が提供している認証済みかを判定するメソッドです -->
             <li>
+              <%= link_to "ホーム", "/tabletennis/index", class: "nav-link" %>
+            </li>
+            <li>
+              <%= link_to "練習一覧", "/", class: "nav-link" %>
+            </li>
+            <li>
+              <%= link_to "新規練習追加", new_post_path, class: "nav-link" %>
+            </li>
+            <li>
+              <%= link_to "練習時間履歴", "/time/index", class: "nav-link" %>
+            </li>
+            <li>
               <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %>
-            </li>
-            <li>
-              <%= link_to "投稿一覧", "/", class: "nav-link" %>
-            </li>
-            <li>
-              <%= link_to "新規投稿", new_post_path, class: "nav-link" %>
-            </li>
-            <li>
-              <%= link_to "スレッド一覧", "/topics/index", class: "nav-link" %>
-            </li>
-            <li>
-              <%= link_to "スレッド新規投稿", "/topics/new", class: "nav-link" %>
             </li>
           <% else %>
             <!-- ログインしていない場合に表示されます -->
