--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,11 @@
+<header class="h1_tabletennis">
+    卓球練習管理
+</header>
+
 <div class="container">
  <div class="row">
   <div class="col-md-8 mx-autp post-form-container">
-   <h2 class="h2">新規投稿</h2>
+   <h2 class="h2">新規練習追加</h2>
    <%=form_with(url:create_post_path, model: @post, local:true,method: :post,html:{class:'post-form'})do|f|%>
    
     <% if @post.errors.any? %>
@@ -12,12 +16,12 @@
     <% end %>
       
     <div class="form-group">
-     <%= f.label"タイトル",class: 'form-label'%>
+     <%= f.label"練習タイトル",class: 'form-label'%>
      <%= f.text_field:title,class: 'form-control'%>
     <div>
     
     <div class="form-group">
-     <%= f.label "本文", class: 'form-label' %>
+     <%= f.label "練習内容", class: 'form-label' %>
      <%= f.text_area :body, class: 'form-control' %>
     </div>
     
@@ -31,9 +35,13 @@
     </div>
     
     <div class="button-group">
-     <%= f.submit '投稿する', class: 'btn btn-primary' %>
+     <%= f.submit '新規追加', class: 'btn btn-primary' %>
     </div>
    <% end %>
   </div>
  </div>
+</div>
+
+<div class="text-center">
+<%= link_to "ホーム画面に戻る", tabletennis_index_path, class: "btn btn-link" %>
 </div>
