--- a/app/views/tabletennis/index.html.erb
+++ b/app/views/tabletennis/index.html.erb
@@ -28,14 +28,28 @@
     </div>
 </body>
 
-
 <h2 class="title_1">日付 / 時間</h2> 
+
 <div >ここで時間を入力</div> 
 
 
 
 
-<h1 class="title_1">~現在の練習メニュー~</h1>
+<h1 class="center_position">~現在の練習メニュー~</h1>
+
+<body>
+    <div class="titile-button">
+        <div class="Practice-Title">練習タイトルのみ</div>
+        <div class="delete-button">削除</div> 
+    </div>
+</body>
+
+<body>
+    <div class="titile-button">
+        <div class="Practice-Title">練習タイトルのみ</div>
+        <div class="delete-button">削除</div> 
+    </div>
+</body>
 
 <body>
     <div class="titile-button">
