--- a/app/assets/stylesheets/sass/_table-tennis.scss
+++ b/app/assets/stylesheets/sass/_table-tennis.scss
@@ -5,7 +5,7 @@
     text-align: center;
     background-color: rgb(218, 241, 48);
     color: rgb(248, 5, 5)
-}
+}ccv
 
 .title_1 {
     text-align: center;
