--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -35,13 +35,10 @@
     </div>
     
     <div class="button-group">
-     <%= f.submit '新規追加', class: 'btn btn-primary' %>
+     <%= f.submit '新規練習追加', class: 'btn btn-primary' %>
     </div>
    <% end %>
   </div>
  </div>
 </div>
 
-<div class="text-center">
-<%= link_to "ホーム画面に戻る", tabletennis_index_path, class: "btn btn-link" %>
-</div>
