--- a/app/views/tabletennis/index.html.erb
+++ b/app/views/tabletennis/index.html.erb
@@ -28,10 +28,29 @@
     </div>
 </body>
 
-<h2 class="title_1">日付 / 時間</h2> 
+<div class="d-flex justify-content-center">
+    <%= form_with model: Tabletennistime, url: tabletennis_index_path, method: :post do |f| %>
+        <div class="form-group ">
+            <%= f.label :date, "日付" %>
+            <%= f.date_field :date, class: 'form-control' %>
+        </div>
+    
+        <div class="form-group ">
+            <%= f.label :hour, "時間" %>
+            <%= f.select :hour, (0..8).to_a, { include_blank: '時間を入力（最大8時間）' }, class: 'form-control' %>
+        </div>
+    
+        <div class="form-group ">
+            <%= f.label :minutes, "分" %>
+            <%= f.select :minutes, [0, 15, 30, 45].to_a, { include_blank: '分を入力（15分毎）' }, class: 'form-control' %>
+        </div>
 
-<div >ここで時間を入力</div> 
-
+        <div class="text-center">
+            <%= f.submit "練習時間を保存", class: 'btn btn-primary' %>
+        </div>
+        
+    <% end %>
+</div>
 
 
 
