時間記録は実装済

--- a/app/views/time/index.html.erb
+++ b/app/views/time/index.html.erb
@@ -8,9 +8,15 @@
 
 <h1>記録された時間一覧</h1>
 
-
-
-
+<div class="container">
+  <% @tabletennistimes.each do |time| %>
+    <div class="time-info">
+      <div class="time-value"><%= time.date %></div>
+      <div class="time-value"><%= time.hour %>時間</div>
+      <div class="time-value"><%= time.minutes %>分</div>
+    </div>
+  <% end %>
+</div>
 
 <div class="text-center">
 <%= link_to "ホーム画面に戻る", tabletennis_index_path, class: "btn btn-link" %>
