時間集計検討

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,27 +12,6 @@
     </div>
 </body>
 
-<div class="Practice-Title">選択した練習タイトル:</div>
-<div id="selected-post-titles"></div>
-
-<script>
-  document.getElementById('show-selected').addEventListener('click', function() {
-    var checkboxes = document.querySelectorAll('input[name="selected_posts[]"]:checked');
-    var selectedPostTitles = Array.from(checkboxes).map(function(checkbox) {
-      return checkbox.parentNode.nextElementSibling.querySelector('.title').textContent;
-    });
-
-    var selectedPostTitlesContainer = document.getElementById('selected-post-titles');
-    selectedPostTitlesContainer.innerHTML = '';
-
-    selectedPostTitles.forEach(function(title) {
-      var p = document.createElement('p');
-      p.textContent = title;
-      selectedPostTitlesContainer.appendChild(p);
-    });
-  });
-</script>
-
 <body>
     <div class="titile-button">
         <div class="Practice-Title">練習タイトルのみ</div>
@@ -62,17 +41,14 @@
 </body>
 
 <h1 class="title_1">練習一覧 / 練習新規追加</h1>
-
 <div class="center_position">
-  <button type="button" class="btn btn-success" id="show-selected">選択したデータを表示</button>
+  <button type="button" class="btn btn-success" id="show-selected">現在の練習メニューに追加</button>
 </div>
-
-
 
 <div class="post-list">
   <% @posts.each do |post| %>
     <div class="post">
-      <input type="checkbox" name="selected_posts[]" value="<%= post.id %>">
+    <input type="checkbox" name="selected_posts[]" value="<%= post.id %>">
       <a class="post" href="<%= edit_post_path(post) %>">
         <div class="header">
           <h2 class="title"><%= post.title %></h2>
@@ -82,50 +58,47 @@
     </div>
   <% end %>
 </div>
-
-
 
 <div class="text-center">
-<%= link_to "ホーム画面に戻る", tabletennis_index_path, class: "btn btn-link" %>
+  <%= link_to "ホーム画面に戻る", tabletennis_index_path, class: "btn btn-link" %>
 </div>
 
 
-<div class="center_position">
-  <button type="button" class="btn btn-success" id="show-selected">選択したデータを表示</button>
-</div>
 
-<div class="Practice-Title">選択した練習タイトル:</div>
-<div id="selected-post-titles"></div>
 
-<script>
-  document.getElementById('show-selected').addEventListener('click', function() {
-    var checkboxes = document.querySelectorAll('input[name="selected_posts[]"]:checked');
-    var selectedPostTitles = Array.from(checkboxes).map(function(checkbox) {
-      return checkbox.parentNode.nextElementSibling.querySelector('.title').textContent;
-    });
-
-    var selectedPostTitlesContainer = document.getElementById('selected-post-titles');
-    selectedPostTitlesContainer.innerHTML = '';
-
-    selectedPostTitles.forEach(function(title) {
-      var p = document.createElement('p');
-      p.textContent = title;
-      selectedPostTitlesContainer.appendChild(p);
-    });
-  });
-</script>
 
 <div class="post-list">
   <% @posts.each do |post| %>
-    <div class="post">
-      <input type="checkbox" name="selected_posts[]" value="<%= post.id %>">
-      <a class="post" href="<%= edit_post_path(post) %>">
-        <div class="header">
-          <h2 class="title"><%= post.title %></h2>
-          <p class="timestamp"><%= post.created_at.strftime("%B %d, %Y") %></p>
-        </div>
-      </a>
-    </div>
+    <% if post.add == 1 %>
+      <div class="post">
+        <a class="post" href="<%= edit_post_path(post) %>">
+          <div class="header">
+            <h2 class="title"><%= post.title %></h2>
+            <p class="timestamp"><%= post.created_at.strftime("%B %d, %Y") %></p>
+          </div>
+        </a>
+      </div>
+    <% end %>
   <% end %>
 </div>
 
+
+<%= form_tag(add_path, method: :post) do %>
+  <div class="center_position">
+    <button type="submit" class="btn btn-success" id="show-selected">現在の練習メニューに追加</button>
+  </div>
+
+  <div class="post-list">
+    <% @posts.each do |post| %>
+      <div class="post">
+        <input type="checkbox" name="selected_posts[]" value="<%= post.id %>">
+        <a class="post" href="<%= edit_post_path(post) %>">
+          <div class="header">
+            <h2 class="title"><%= post.title %></h2>
+            <p class="timestamp"><%= post.created_at.strftime("%B %d, %Y") %></p>
+          </div>
+        </a>
+      </div>
+    <% end %>
+  </div>
+<% end %>
