--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -40,9 +40,9 @@
     </div>
 </body>
 
-<h1 class="title_1">練習一覧 / 練習新規追加</h1>
+<h1 class="center_position">練習一覧</h1>
 <div class="center_position">
-  <button type="button" class="btn btn-success" id="show-selected">現在の練習メニューに追加</button>
+  <button type="button" class="btn btn-success">現在の練習メニューに追加</button>
 </div>
 
 <div class="post-list">
@@ -62,6 +62,41 @@
 <div class="text-center">
   <%= link_to "ホーム画面に戻る", tabletennis_index_path, class: "btn btn-link" %>
 </div>
+
+<div class="post-list">
+  <form action="<%= update_add_status_post_path %>" method="post">
+    <%= csrf_meta_tags %>
+    <input type="hidden" name="_method" value="patch">
+    <% @posts.each do |post| %>
+      <div class="post">
+        <input type="checkbox" name="selected_posts[]" value="<%= post.id %>">
+        <a class="post" href="<%= edit_post_path(post) %>">
+          <div class="header">
+            <h2 class="title"><%= post.title %></h2>
+            <p class="timestamp"><%= post.created_at.strftime("%B %d, %Y") %></p>
+          </div>
+        </a>
+      </div>
+    <% end %>
+    <button type="submit">更新</button>
+  </form>
+</div>
+
+
+
+<% if @selected_posts.present? %>
+  <% @selected_posts.each do |post| %>
+    <div class="post">
+      <h2><%= post.title %></h2>
+      <p><%= post.body %></p>
+    </div>
+  <% end %>
+<% else %>
+  <p>選択されたポストはありません。</p>
+<% end %>
+
+
+
 
 
 
