--- a/app/assets/stylesheets/sass/_posts.scss
+++ b/app/assets/stylesheets/sass/_posts.scss
@@ -6,6 +6,7 @@
 
 
 .post-form-container {
+  
 
 
   .h2 {
@@ -14,12 +15,14 @@
   }
 
   .post-form {
+    
     .form-control {
       width: 100%;
       border: 1px solid lightgray;
       border-radius: 8px;
       padding: 10px;
       margin-bottom: 10px;
+      padding: 10px 20px;
     }
 
     .form-label {
@@ -162,4 +165,36 @@
   margin-bottom: 5px;
 }
 
+.practice-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.practice {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  max-width: 600px;
+  color: #000;
+  text-decoration: none;
+}
+
+.practice-content {
+  display: flex;
+  align-items: center;
+}
+
+.title {
+  /* お好みでタイトルのスタイルを調整 */
+  margin: 0;
+}
+
+input[type="checkbox"] {
+  margin: 0; /* マージンをリセット */
+  width: 30px; /* チェックボックスの幅を調整 */
+  height: 30px; /* チェックボックスの高さを調整 */
+  margin-right: 30px;
+}
