--- a/app/views/time/index.html.erb
+++ b/app/views/time/index.html.erb
@@ -11,10 +11,11 @@
 <div class="container">
   <% @tabletennistimes.each do |time| %>
     <div class="time-info">
+    <%= time.id %>
       <div class="time-value"><%= time.date %></div>
       <div class="time-value"><%= time.hour %>時間</div>
       <div class="time-value"><%= time.minutes %>分</div>
-      <%= link_to '削除', time_destroy_path(@tabletennistime), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-danger" %>
+      <%= link_to '削除', time_destroy_path(id: time.id), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-danger" %>
 
     </div>
   <% end %>
