--- a/app/assets/stylesheets/sass/_time.scss
+++ b/app/assets/stylesheets/sass/_time.scss
@@ -6,13 +6,15 @@
 }
 
 .time-info {
-  display: flex; 
-  align-items: center
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
+
 .time-label {
-  margin-right: 5px; /* 日付、時間、分の間に少しスペースを追加 */
-  font-weight: bold; /* 日付、時間、分のラベルを太字にする */
+  margin-right: 5px; 
+  font-weight: bold; 
 }   
 
 .time-value {
@@ -21,6 +23,6 @@
 }
 
 .btn {
-  width: 100px; /* ボタンの固定幅を設定 */
-  margin-buttom: 10px; /* ボタン間の間隔を設定 */
+  width: 100px; 
+  margin-buttom: 10px; 
 }
