--- a/app/assets/stylesheets/sass/_posts.scss
+++ b/app/assets/stylesheets/sass/_posts.scss
@@ -165,6 +165,14 @@
   margin-bottom: 5px;
 }
 
+.center_position_practice_index {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
 .practice-list {
   display: flex;
   flex-direction: column;
@@ -183,12 +191,19 @@
 }
 
 .practice-content {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  max-width: 600px;
+  color: #000;
+  text-decoration: none;
   display: flex;
   align-items: center;
 }
 
 .title {
-  /* お好みでタイトルのスタイルを調整 */
   margin: 0;
 }
 
@@ -198,3 +213,11 @@ input[type="checkbox"] {
   height: 30px; /* チェックボックスの高さを調整 */
   margin-right: 30px;
 }
+
+.btn.btn-success {
+  width: 200px; 
+}
+
+
+
+
