--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -36,7 +36,7 @@
     </div>
     
     <div class="button-group">
-     <%= f.submit '新規練習追加', class: 'btn btn-primary' %>
+     <%= f.submit '新規練習追加', class: 'button-003' %>
     </div>
    <% end %>
   </div>
