--- a/app/assets/stylesheets/sass/_table-tennis.scss
+++ b/app/assets/stylesheets/sass/_table-tennis.scss
@@ -22,6 +22,7 @@
     text-align: center;
     font-size: 24px;
     color: white;
+    white-space: nowrap;
 }
 
 .total-time_1 {
@@ -70,6 +71,27 @@
     margin-left: 10px;
 }
 
+.button-003 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    margin-top: 5px;
+    padding: 10px 5px;
+    border: none;
+    border-radius: 25px;
+    box-shadow: 0 2px 3px rgb(0 0 0 / 25%), 0 2px 3px -2px rgb(0 0 0 / 15%);
+    background-color: #2589d0;
+    color: #fff;
+    font-weight: 600;
+    font-size: 1em;
+}
+
+.button-003:hover {
+    background-color: #1579c0;
+}
+  
+
 
 /* 現在の練習メニュー */
 .titile-button {
@@ -117,4 +139,5 @@ flex-container {
     justify-content: space-between;
     padding: 10px; 
   }
+
   
