--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,13 +5,15 @@
 
 <h1 class="center_position">~現在の練習メニュー~</h1>
 
+
 <div class="center_position">
   <% if @selected_posts.present? %>
     <% @selected_posts.each do |post| %>
       <div class="practice">
         <div class="post-title-container" style="display: flex; justify-content: space-between;">
           <h2><%= post.title %></h2>
-          <%= link_to '削除', delete_post_path(post), method: :post, class: 'delete-button' %>
+          <%= post.add %>
+          <%= link_to '削除', remove_post_path(post), method: :patch, class: 'delete-button' %>
         </div>
       </div>
     <% end %>
@@ -34,6 +36,7 @@
         <div class="practice-content">
           <input type="checkbox" name="selected_posts[]" value="<%= post.id %>">
           <a class="post" href="<%= edit_post_path(post) %>">
+          <%= post.add %>
               <h2 class="title"><%= post.title %></h2>
           </a>
         </div>
