--- a/app/views/tabletennis/index.html.erb
+++ b/app/views/tabletennis/index.html.erb
@@ -42,7 +42,7 @@
         </div>
 
         <div class="text-center">
-            <%= f.submit "練習時間を保存", class: 'btn btn-primary' %>
+            <%= f.submit "練習時間を保存", class: 'button-003' %>
         </div>
     <% end %>
 </div>
@@ -51,41 +51,22 @@
 
 <h1 class="center_position">~現在の練習メニュー~</h1>
 
-<body>
-    <div class="titile-button">
-        <div class="Practice-Title">練習タイトルのみ</div>
-        <div class="delete-button">削除</div> 
-    </div>
-</body>
-
-<body>
-    <div class="titile-button">
-        <div class="Practice-Title">練習タイトルのみ</div>
-        <div class="delete-button">削除</div> 
-    </div>
-</body>
-
-<body>
-    <div class="titile-button">
-        <div class="Practice-Title">練習タイトルのみ</div>
-        <div class="delete-button">削除</div> 
-    </div>
-</body>
-
-<body>
-    <div class="titile-button">
-        <div class="Practice-Title">練習タイトルのみ</div>
-        <div class="delete-button">削除</div> 
-    </div>
-</body>
-
-<body>
-    <div class="titile-button">
-        <div class="Practice-Title">練習タイトルのみ</div>
-        <div class="delete-button">削除</div> 
-    </div>
-</body>
+<div class="center_position">
+  <% if @selected_posts.present? %>
+    <% @selected_posts.each do |post| %>
+      <div class="practice">
+        <div class="post-title-container" style="display: flex; justify-content: space-between;">
+          <h2><%= post.title %></h2>
+          <%= post.add %>
+          <%= link_to '削除', remove_post_path(post), method: :patch, class: 'delete-button' %>
+        </div>
+      </div>
+    <% end %>
+  <% else %>
+    <p>選択された練習はありません</p>
+  <% end %>
+</div>
 
 <div class="text-center">
-<%= link_to "練習一覧はこちら", index_post_path, class: "btn btn-link" %>
+    <%= link_to "練習一覧はこちら", index_post_path, class: "btn btn-link" %>
 </div>
