--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -23,7 +23,12 @@
                 <%= f.label "練習内容", class: 'form-label' %>
                 <%= f.text_area :body, value: @post.body, class: 'form-control' %>
             </div>
-            
+
+            <div class="form-group">
+                <%= f.label :id,"URL", class: 'form-label' %>
+                <%= f.text_area :url, class: 'form-control' %>
+            </div>
+                    
             <div class="form-group image-upload">
                 <%= f.label "画像", class: 'form-rabel' %>
                 <div class="image-preview" id="imagePreview">
