--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -18,12 +18,17 @@
       
     <div class="form-group">
      <%= f.label"練習タイトル",class: 'form-label'%>
-     <%= f.text_field:title,class: 'form-control'%>
+     <%= f.text_field:title, class: 'form-control'%>
     <div>
     
     <div class="form-group">
      <%= f.label "練習内容", class: 'form-label' %>
      <%= f.text_area :body, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+     <%= f.label :id,"URL", class: 'form-label' %>
+     <%= f.text_area :url, class: 'form-control' %>
     </div>
     
     <div class="form-group image-upload">
